Created buttons, changed the logic to fit

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
     <title>Rock Paper Scissors</title>
+    <script src="rps.js" defer></script>
 </head>
 <body>
-    <h1>Welcome to Rock Paper Scissors!</h1>
-
-<script src="rps.js"></script>
+    <button id="rock">ROCK</button>
+    <button id="paper">PAPER</button>
+    <button id="scissors">SCISSORS</button>    
 </body>
 </html>
