Added readme + icon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="rps.css" style="text/css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Kanit' rel='stylesheet'>
     <script src="rps.js" defer></script>
+    <link rel="shortcut icon" href="skull.ico" />
 </head>
 <body>
     <div id="container-left">
@@ -35,5 +36,6 @@
     </div>
 
     <div id="reset">reset</div>
+    <div id="staf">&#169;Stafngrimr</div>
 </body>
 </html>
