cleaned up footer/links

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     </div>
 
     <div id="reset">reset</div>
-    <div id="staf">&#169;Stafngrimr</div>
+    <footer>
+        <div id="github"><a href="http://github.com/stafngrimr" target="_blank"><img src="github-mark-white.png" id="img" alt="github-logo"></a></div>
+		<div>by <a href="http://stephencarder.net" target="_blank">Stafngrimr</a></div>
+    </footer>
 </body>
 </html>
